# shift-scheduler

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  shift-scheduler.dev.postman_environment.json  shift-scheduler.postman_collection.json
data-service/: .env  Cargo.toml  Dockerfile
data-service/migrations/: 20260217183908_init.sql
data-service/src/: app_state.rs  lib.rs  main.rs
data-service/src/application/: error.rs  group_service.rs  mod.rs  staff_service.rs  traits.rs
data-service/src/domain/: group.rs  mod.rs  staff.rs
data-service/src/infrastructure/: cache.rs  group_repository.rs  mod.rs  staff_repository.rs
data-service/src/presentation/: api_swagger.rs  group_handler.rs  mod.rs  staff_handler.rs
data-service/tests/: data_service_api.rs  group_api.rs  staff_api.rs
data-service/tests/common/: mod.rs
scheduling-service/: .env  Cargo.toml  Dockerfile  config.yaml
scheduling-service/src/: app_state.rs  config.rs  lib.rs  main.rs  worker.rs
scheduling-service/src/application/: api_error.rs  data_client_trait.rs  mod.rs  schedule_service.rs  traits.rs
scheduling-service/src/domain/: mod.rs  schedule.rs
scheduling-service/src/domain/rules/: balance_rule.rs  day_off_rule.rs  mod.rs  no_morning_after_evening.rs  rule_engine.rs
scheduling-service/src/infrastructure/: db.rs  http_data_client.rs  mod.rs  schedule_repository.rs
scheduling-service/src/presentation/: api_swagger.rs  mod.rs  schedule_handler.rs
scheduling-service/tests/: api_integration_test.rs  schedule_service_test.rs  unit_rules_test.rs
scheduling-service/tests/common/: mod.rs
(+36 files in other folders)
