[package]
name = "scheduling_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
anyhow = "1.0.94"
dotenvy = "0.15"
shared = { path = "../shared" }
thiserror = "1.0.69"
sqlx.workspace = true

[dev-dependencies]
mockall = "0.12"
tower = "0.5.3"